# Trenta-Calculator

./: .gitignore  .makefile.swp  LICENSE  Makefile.am  README.md  calc.desktop.in  configure.ac  main  main.vala  makefile  style.css
.deps/: trenta_calc-main.Po
src/: main.vala
